@@ -1,17 +1,38 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-MD5 e95a4cff22b82f67d41788b36eb6f80c ChangeLog 2006
-MD5 ef4af237db8a9c93c7fb476c87e0e9d8 files/digest-planeshift-0.3.011 73
+AUX planeshift 305 RMD160 8c658ca78f6f30aeb386bd298f33af2fc4b03e6e SHA1 1cf35acea231819d1ae2c2cd1bb6dd27c85d8a5a SHA256 1ff439d50d6b5913ce63a79f1bb4852b32c4d61805e54b345666fb4092a4c728
 MD5 c88f36fa5955068c95a8717023d99a87 files/planeshift 305
+RMD160 8c658ca78f6f30aeb386bd298f33af2fc4b03e6e files/planeshift 305
+SHA256 1ff439d50d6b5913ce63a79f1bb4852b32c4d61805e54b345666fb4092a4c728 files/planeshift 305
+AUX planeshift-setup 290 RMD160 9f44f7f38fd3c4dbc9256b86c3b1bda079e4610a SHA1 d60186bafbffe80bbd17947a73192db469eda29f SHA256 67ecb378a8ab7577da4615e541520dd28a3d2eedd7f103a64ec3d521ebc4ea14
 MD5 d36ebb08ae2a044431da73cf9af175f2 files/planeshift-setup 290
+RMD160 9f44f7f38fd3c4dbc9256b86c3b1bda079e4610a files/planeshift-setup 290
+SHA256 67ecb378a8ab7577da4615e541520dd28a3d2eedd7f103a64ec3d521ebc4ea14 files/planeshift-setup 290
+AUX planeshift-updater 335 RMD160 0598a70ddf42ca2239b19bc35a66d279249d1d00 SHA1 643cf8336a0889b00573b1d82f44151838b860f7 SHA256 b190922c763593fcb0f031505c9161d1ece30edd166fb67985679b306d52207d
 MD5 b0529daec0a1a5176bc138c2cb99654d files/planeshift-updater 335
+RMD160 0598a70ddf42ca2239b19bc35a66d279249d1d00 files/planeshift-updater 335
+SHA256 b190922c763593fcb0f031505c9161d1ece30edd166fb67985679b306d52207d files/planeshift-updater 335
+DIST planeshift-0.3.011.tar.bz2 11008107
+EBUILD planeshift-0.3.011.ebuild 2480 RMD160 49d73c0755728d7ee4312bb15f3b2c809ba0ffbc SHA1 8b002421833f0712a884322d66febd2386beaced SHA256 76995a965bac4b476a0ad0259c50e8c0c6e1ed0e9e9e86bae7da5bebcca7d14f
+MD5 0e5d8725d9162235ede73f15b4636ca3 planeshift-0.3.011.ebuild 2480
+RMD160 49d73c0755728d7ee4312bb15f3b2c809ba0ffbc planeshift-0.3.011.ebuild 2480
+SHA256 76995a965bac4b476a0ad0259c50e8c0c6e1ed0e9e9e86bae7da5bebcca7d14f planeshift-0.3.011.ebuild 2480
+MISC ChangeLog 2137 RMD160 f6397d9854ef127775861ecd088645f0bebb6fe9 SHA1 816310ea9eef8f5c5b57867eacdd7a60a736650a SHA256 4a78464e93e049f12e75b49c5131ce0b0f1fc1e461ad5a7be6552434fdc951c2
+MD5 cfac4fc97e023a7696139ab2601f2e5c ChangeLog 2137
+RMD160 f6397d9854ef127775861ecd088645f0bebb6fe9 ChangeLog 2137
+SHA256 4a78464e93e049f12e75b49c5131ce0b0f1fc1e461ad5a7be6552434fdc951c2 ChangeLog 2137
+MISC metadata.xml 158 RMD160 cbd9984bb6b426c8c9cee5022fe0a26261612fea SHA1 be5251fa1dacef5c41b74761bb1c8c54fb633b9e SHA256 1423a4fdd4a79b1728a2056d9e300f7e1074253095d82726218d9e9b953888a3
 MD5 f17b9b8fa07a38914fe1c03268f51678 metadata.xml 158
-MD5 22305942b48821e0fe6f83cfdad076d3 planeshift-0.3.011.ebuild 2518
+RMD160 cbd9984bb6b426c8c9cee5022fe0a26261612fea metadata.xml 158
+SHA256 1423a4fdd4a79b1728a2056d9e300f7e1074253095d82726218d9e9b953888a3 metadata.xml 158
+MD5 ef4af237db8a9c93c7fb476c87e0e9d8 files/digest-planeshift-0.3.011 73
+RMD160 909b097a9ac844261e3a005ed6af664df1907eef files/digest-planeshift-0.3.011 73
+SHA256 f2ffc9336d0e8d15ecd540f3e4176f82274ba959e33d804800860e0bf87d5f43 files/digest-planeshift-0.3.011 73
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v1.4.2 (GNU/Linux)
+Version: GnuPG v1.4.3 (GNU/Linux)
 
-iD8DBQFDaAMCgIKl8Uu19MoRAr5AAJ4vYFHaSGHDINd08qh0urr+hzoVZgCeM4+h
-Y6Hc1OvsEXXP0XAzZ3zCraE=
-=MEaq
+iD8DBQFEe1J5kT4lNIS36YERAsHXAKCfOEhG19EJ5v8opsG0QnCrIhUv2wCfeipj
+r+aFyDuYJS5isWbSmQMKyCQ=
+=ox4A
 -----END PGP SIGNATURE-----
